# kapnode-deployments

./: .gitignore  NEXT_STEPS.md  README.md  REVIEW.md
.claude/skills/: git-workflow.md
config/: .homelab-deploy.conf.example  inventory.example.yml
docs/: CURRENT-STATE-AND-PLANS.md  DEPLOYMENT-FIXES-REPORT.md  GIT_WORKFLOW.md  HOMELAB_DOCUMENTATION.md  REFINED-Structure.md  REVISED-ARCHITECTURE.md  TUI_USER_GUIDE.md  VM-DEPLOYMENT-README.md  system-info-Ridgeserver.txt  system-info-Tower.txt  system-info-homeassistant.txt  system-info-kapmox.txt  system-info-kappi-one.txt  system-info-kappi-two.txt  system-info-minikapserver.txt
examples/deploy-templates/: backup-node.yml  k3s-worker.yml  multi-location-cluster.yml  storage-worker.yml
scripts/: deploy-examples.sh  deploy-ubuntu-vm.sh  homelab-info-collector.sh  post-install-storage.sh
tui/: __init__.py  deploy_node.py  pyproject.toml  requirements.txt  styles.css
tui/components/: __init__.py  deployment_form.py  log_viewer.py  node_selector.py  progress.py
tui/lib/: __init__.py  config_manager.py  inventory.py  script_executor.py  ssh_manager.py  validators.py
tui/screens/: __init__.py  deploy_screen.py  history_screen.py  main_menu.py  update_screen.py
